[workspace]
resolver = "3"

default-members = ["crates/rproxy"]

members = [
    "crates/atls",
    "crates/rproxy",
]

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
manual_let_else = "warn"
match_same_arms = "warn"
uninlined_format_args = "warn"
unused_async = "warn"

[workspace.dependencies]
actix = "0.13.5"
actix-http = { version = "3.11.1", features = ["ws"] }
actix-rt = "2.11.0"
actix-server = "2.6.0"
actix-service = "2.0.3"
actix-tls = { version = "3.4.0", features = ["connect", "rustls-0_23-webpki-roots"] }
actix-utils = "3.0.1"
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-ws = "0.3.0"
awc = { version = "3.7.0", features = ["rustls-0_23"] }
http = "1.3.1"
rcgen = "0.14.7"
rustls = {version = "0.23.32", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26.4"
