[package]
name = "rproxy"
version = "0.0.10"
edition = "2024"
default-run = "rproxy"

[[bin]]
name = "rproxy"
path = "src/bin/main.rs"

[lints]
workspace = true

[features]
default = []

chaos = ["rand"]

[dependencies]
actix = "0.13.5"
actix-http = { version = "3.11.1", features = ["ws"] }
actix-server = "2.6.0"
actix-service = "2.0.3"
actix-tls = "3.4.0"
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-ws = "0.3.0"
alloy-json-rpc = "1.0.41"
alloy-primitives = "1.3.1"
alloy-rlp = "0.3.12"
awc = "3.7.0"
base64 = "0.22.1"
brotli = "8.0.2"
bytes = "1.10.1"
bytestring = "1.5.0"
clap = { version = "4.5.47", features = ["derive", "env", "wrap_help"] }
console-subscriber = "0.5.0"
flate2 = "1.1.2"
futures = "0.3.31"
futures-core = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
humantime = "2.2.0"
libc = "0.2.177"
moka = { version = "0.12.11", features = ["sync"] }
op-alloy-consensus = "0.20.0"
parking_lot = "0.12.4"
pin-project = "1.1.10"
pnet = "0.35.0"
prometheus-client = { git = "https://github.com/0x416e746f6e/client_rust.git", branch = "nested-labels"}
rand = { version = "0.9.2", optional = true }
rustc-hash = "2.1.1"
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
scc = "3.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
socket2 = "0.6.0"
sysctl = "0.7.1"
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.27.0"
tokio-util = "0.7.16"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "valuable"] }
tungstenite = { version = "0.27.0", features = ["handshake"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v7" ]}
valuable = { version = "0.1.1", features = ["derive"] }
x509-parser = "0.18.0"
zstd = "0.13.3"
